--- a/chap3.tex
+++ b/chap3.tex
@@ -412,17 +412,18 @@ thought, and similarly system performance should be expected to shift
 over time as interactions with automation are internalized.
 
 Not to belabor the point, however, the perspective I am describing is
-not fundamentally new. Supervisory control and
+not fundamentally new---simply, its importance is not often
+recognized outside of particular disciplinary boundaries. Supervisory control and 
 joint-cognitive systems approaches are actually in use all over
-industry, even in cases where they are not necessarily recognized in
+industry, even in cases where they are not necessarily cast in
 those terms. 
 %%Wrap up: Actual use all over industry (Sheridan 10-11), and implicit
 %in much popular writing, 
-just not generally acknowledged as an important field in all its complexity
-HSC not even that well considered/thought out in many fields; HF
-engineers low on status and too often just brought in at the last
-minute to design an interface rather than actually being involved in
-device design from the beginning.
+%just not generally acknowledged as an important field in all its complexity
+%HSC not even that well considered/thought out in many fields; HF
+%engineers low on status and too often just brought in at the last
+%minute to design an interface rather than actually being involved in
+%device design from the beginning.
 
 advantage: ``It is possible to design computer systems with open
 interfaces (Hutchins, 1990) that support learning in joint action but
