additions to chap3

--- a/chap3.tex
+++ b/chap3.tex
@@ -461,13 +461,16 @@ it is that aircraft are kept separated from each other, we see that it
 is through the propagation of representational state of descriptions
 of flight paths into the state of the aircraft controls
 themselves.''\cite[p. 14]{hutchinsKlausen} This situation is not quite
-the same for cars, but in principle, the highway presents a similar
-situation. The propagation of a ``plan'' of the vehicle's path on the
+the same for cars, which are generally not orchestrated at a
+system-level in the same fashion. But in principle, the roadway presents a related
+information processing situation. The propagation of a ``plan'' of the
+vehicle's path on the 
 road into the state of the vehicle's controls keeps vehicles apart.
-And when that vehicle system involves computerized
-displays, sensors, and people (even at a high-level of oversight, as
-one would find represented in an employee monitoring a vehicle fleet
-from an office), the same point holds. Given these underlying
+And even when that vehicle system involves computerized
+displays, sensors, and people, the same point holds;  at a high-level of oversight, as
+one would find represented in an employee monitoring an automated vehicle fleet remotely
+from an office, the parallelism with aircraft operations returns in
+full force. Given these underlying
 similarities in terms of human-machine interaction, let us look at
 other examples of automated technologies (in space, underwater, and in
 the air) to see how previous sets of designers and users have
@@ -491,8 +494,72 @@ negotiated compromises of automation, autonomy, and human-control.
 
 \subsection{Lessons from Autonomy Research}
 
-Mercury/Gemini/Apollo
+Spaceflight, both manned and unmanned, provides myriad reasons to
+invest in automated systems: time delays prevent or at least greatly
+inhibit remote control from Earth; conditions where humans are not
+uniquely equipped to survive suggest the use of mechanical explorers
+instead; and precise control functions with redundant backup systems
+suggest the use of the unique capacities of computerized systems to
+monitor constantly and act immediately in the even of an emergency.
+And these are all senses with which the narrative of automation in
+spaceflight is inflected today. Certainly unmanned spaceflight had a
+strong interest in automation since at least the 1950s, with serious
+research being done on simple automated probes to do a fly-by of
+Mars.\cite{???-DMsclass} But the story of automation in spaceflight is
+not nearly so simple as it appears. Rather than being the ultimate and
+obvious endpoint of a progression of human engineering in space, the
+roles and implementations of automation remained fraught, highly
+contested by astronauts themselves due to professional pride, national
+politics, evidence for the capability of the human being to be in
+control, and the dogma among certain groups that such control is
+necessarily more reliable than computerized automation---which has not
+a little to do with the fragility of pre-integrated-circuit computer
+technologies.
 
+From 1952 to 1954, Colliers magazine published a series of articles
+titled \emph{Man Will Conquer Space Soon} which described Wernher Von
+Braun's vision for manned spaceflight.\cite{???-wiki} Numerous
+articles focused, not surprisingly, on the people who would do the
+voyaging, how they would be selected, tested, and kept alive. But
+lurking behind this majestic picture of manned spaceflight was a dark
+realization for prospective astronauts: to von Braun himself, the
+astronaut would be a mere passenger, ferried into space by automated
+rockets. In a speech <FILL IN> <his quote about capabilities>.
+
+Pilots---prospective astronauts---were not about to find themselves
+cut out of the control loop, and for good reasons. Not only was their
+personal pride at stake---as military test pilots, they possessed a
+particular standing in part by virtue of being in control of dangerous
+and cutting-edge vehicles like the X-15, which though it necessarily
+incorporated significant automation to deal with hypersonic flight and
+the transition from atmospheric to extra-atmospheric operation, kept
+the pilot firmly in command through fly-by-wire controls---they had
+every reason to doubt the capabilities of computerized guidance and
+control systems. <''Survival'' quotes about broken computers>
+
+Such debates over control did not go away, but lasted through the each
+of the Mercury, Gemini, and Apollo programs
+
+Mercury is a tin can with attitude control
+-but, somewhat conversely, the position of the person in spaceflight
+was very important politically
+-Kennedy ``not that interested in space''; wanted to beat the Russians
+with something BIG
+-Russian space automation was a sort of feminiziation of space; their
+astronauts required no skill
+---perhaps fit a communist ethos (sending the everyman (or woman) into space), but not a meritocratic, capitalist one
+
+Gemini and related research, evidence for putting the pilot in command
+--from launch sims, ground tests
+--triumphs of manual control (aided of course by automated read-outs, IVI)
+
+Apollo starts too soon to learn the lessons of Gemini
+-arguments over Apollo computer; got away with a lot b/c test pilots
+were busy with Gemini
+-but manual control still critical (e.g. moon landings)
+
+Wienser and other scientists perennially against manned spaceflight,
+pushing for unmanned; but Even in the unmanned space, autonomy isn't the end-all-be-all
 Mars rover/space probes
 footnote the \cite{simonite} piece: And so Google’s new vehicle design
 takes a leaf out of NASA’s design book to cope with such
