changes to chap3

--- a/chap3.tex
+++ b/chap3.tex
@@ -524,7 +524,7 @@ voyaging, how they would be selected, tested, and kept alive. But
 lurking behind this majestic picture of manned spaceflight was a dark
 realization for prospective astronauts: to von Braun himself, the
 astronaut would be a mere passenger, ferried into space by automated
-rockets. In a speech <FILL IN> <his quote about capabilities>.
+rockets. In a speech <FILL IN> <his quote about capabilities>.\cite{???}
 
 Pilots---prospective astronauts---were not about to find themselves
 cut out of the control loop, and for good reasons. Not only was their
@@ -533,24 +533,107 @@ particular standing in part by virtue of being in control of dangerous
 and cutting-edge vehicles like the X-15, which though it necessarily
 incorporated significant automation to deal with hypersonic flight and
 the transition from atmospheric to extra-atmospheric operation, kept
-the pilot firmly in command through fly-by-wire controls---they had
+the pilot firmly in command\footnote{Kelly Johnson, the leading aircraft
+designer in the US, working at Lockheed, objected to the manned component of the X-15
+project, but his objections were overruled by the NACA.\cite[p.
+  46]{???-DM}} through fly-by-wire controls\cite{???}---they had 
 every reason to doubt the capabilities of computerized guidance and
-control systems. <''Survival'' quotes about broken computers>
+control systems.\footnote{Even the fly-by-wire control was somewhat
+  controversial. Milt Thompson, a test pilot in the X-15 program, said
+  of it: ``you would like him [the engineer responsible] to be in the
+airplane with you to be exposed to any adverse results.''\cite[p. 55]{???-DM}} <''Survival'' quotes about broken computers>\cite{???} From
+this admittedly partial perspective, the resourcefulness of human
+pilots is the answer to automated technology's lack of reliability.
 
 Such debates over control did not go away, but lasted through the each
-of the Mercury, Gemini, and Apollo programs
+of the Mercury, Gemini, and Apollo programs.Mercury, which began the
+manned space program in the United States, had an ambivalent
+relationship to its astronauts. They were pilots, rather than von
+Braun's ``missile riders,'' but only just. While Mercury preserved an
+aeronautical joystick, which controlled the reaction control thrusters
+(RCS) and thereby allowed the astronauts attitude control over their
+space ``capsule''---nomenclature that would soon find itself under
+siege\cite{???-DMsclass}---they could not fly the Mercury craft in any
+aeronautical sense. Like the warheads of the ballistic missiles from
+which the program spawned---and which were in fact used to convey the
+Mercury astronauts into space---the astronauts were launched by
+automated rockets, and returned to the ground on a purely ballistic
+trajectory. But the presence of the human astronaut was greatly
+important to the Mercury project, even if he (they were all men)
+largely flew as ``Spam in a tin can.''\cite{???} Putting a man in
+space was a political venture more than a scientific one or a matter
+of national defense.\footnote{Scientists held and continue to hold
+  that unmanned missions are more effective in generating scientific
+  discoveries than manned ones.} In the eyes of the world---or at
+least as interpreted by Washington---the
+reputation of the United States depended on it. The shibboleth
+``third world man'' was waiting on the outcome of the space race to
+decide whether to be communist or capitalist.\cite{???} Apollo was, among many
+other things, a nationalist (and even perhaps imperial)  PR campaign.
+Spurred on by Russian successes (Sputnik, Gargarin), which were
+originally of little political interest until the media reporting on
+the events presented them in a frantic light, as a possible sign of
+Soviet technological dominance,\footnote{There was little coverage in
+  Russian papers about the Sputnik launch, and even Gargarin was not
+  greatly covered. However, the media frenzy that ensued in the United
+States and other countries worldwide made clear the political
+importance of being first in space.\cite{???}} Kennedy pushed for a greater
+investment in space research. But he was ``not that interested in
+space''\footnote{He continued: ``I think it's nice, I think we should
+  find out about it,'' but balked at the level of funding necessary
+  for the manned space program unless it led to a US political and PR
+  victory.}---primarily, he wanted to beat the Russians to some big,
+visible space project.\cite{???-whitehousetapes} This project had to
+be manned, precisely because human spaceflight captured peoples
+imaginations, and because the Soviets were certain to continue their
+piloted space flight ventures. But Soviet spacecraft continued to be
+more automated than their Western counterparts---Gargarin could not
+operate abort functionality without unlocking a combination lock, the
+code to which was only reluctantly placed in the cockpit in a sealed
+envelope rather than being radioed from the ground\cite{???}---and
+this automation was seen as a feminization of space:  Soviet
+spacecraft required no skill to operate, and were therefore,
+rhetorically at least, less impressive.\cite{???} This idea was
+supported some years later in <XXXX> by the flight of Valentina Tereshkova, the
+first woman in space, a milestone not followed by the United States
+until the 1970s. This approach perhaps fit a communist ethos, sending
+the representatives of every-man and every-woman into space, but did
+not fit with the ideally meritocratic culture and the political aims
+of the US program, not to mention the flying culture of the astronauts
+ultimately selected for the program.\footnote{All those selected for
+  the Mercury program were military test pilots, despite NASA's
+  existence as a civilian agency.\cite{???-DM} Issues of secrecy alone
+should not have disqualified other military personnel, and a greater
+emphasis on science in the program would have suggested actually
+including scientists on flight teams.\cite{???-DM} Though over the recruitment
+rounds the emphasis on test-pilot status decreased in favor of greater
+engineering knowledge (and higher degrees), and though one geologist
+set foot on the moon during the final Apollo mission, the astronaut
+culture was dominated by influences from the test pilot community.}
 
-Mercury is a tin can with attitude control
--but, somewhat conversely, the position of the person in spaceflight
-was very important politically
--Kennedy ``not that interested in space''; wanted to beat the Russians
-with something BIG
--Russian space automation was a sort of feminiziation of space; their
-astronauts required no skill
----perhaps fit a communist ethos (sending the everyman (or woman) into space), but not a meritocratic, capitalist one
+%% Mercury is a tin can with attitude control
+%% -but, somewhat conversely, the position of the person in spaceflight
+%% was very important politically
+%% -Kennedy ``not that interested in space''; wanted to beat the Russians
+%% with something BIG
+%% -Russian space automation was a sort of feminiziation of space; their
+%% astronauts required no skill
+%% ---perhaps fit a communist ethos (sending the everyman (or woman) into space), but not a meritocratic, capitalist one
 
+The development of the Gemini spacecraft---actually started after the
+Apollo project, intended to demonstrate capabilities necessary for
+a mission to the moon to take place---set out to extend the
+capabilities of Mercury, and incorporate lessons learned from the
+precursor program. One way this occurred was specifically technical, a
+re-engineering of the space capsule to allow systems to be installed
+and serviced from the outside of the craft. But another
+reorchestration of space flight in the Gemini program involves the
+human's interaction with the spacecraft through control systems.
+-pilots want a role in launch vehicles
 Gemini and related research, evidence for putting the pilot in command
 --from launch sims, ground tests
+-interest in orbital maneuvers suggests returning piloting to pilots;
+but orbital dynamics makes it impossible to fly by eye
 --triumphs of manual control (aided of course by automated read-outs, IVI)
 
 Apollo starts too soon to learn the lessons of Gemini
