quotes added to chap3

--- a/chap3.tex
+++ b/chap3.tex
@@ -524,7 +524,13 @@ voyaging, how they would be selected, tested, and kept alive. But
 lurking behind this majestic picture of manned spaceflight was a dark
 realization for prospective astronauts: to von Braun himself, the
 astronaut would be a mere passenger, ferried into space by automated
-rockets. In a speech <FILL IN> <his quote about capabilities>.\cite{???}
+rockets. In a speech <to the Society of Experimental Test Pilots in
+August of 1959> <his quote about
+capabilities; human control is ``actually undesirable'' b/c man is ``outrageously slow and cumbersome'' in missile terms>.\cite[p. 66-67]{???-DM}
+<Relate to earlier speech: Richard Horner on automation to SETP,
+October 4, 1957. reasoned and 
+balanced, but technology would progress faster than us; the ``link''
+that improves the least ``is the man himself''\cite[p. 19]{???-DM}>
 
 Pilots---prospective astronauts---were not about to find themselves
 cut out of the control loop, and for good reasons. Not only was their
@@ -541,7 +547,10 @@ every reason to doubt the capabilities of computerized guidance and
 control systems.\footnote{Even the fly-by-wire control was somewhat
   controversial. Milt Thompson, a test pilot in the X-15 program, said
   of it: ``you would like him [the engineer responsible] to be in the
-airplane with you to be exposed to any adverse results.''\cite[p. 55]{???-DM}} <''Survival'' quotes about broken computers>\cite{???} From
+airplane with you to be exposed to any adverse results.''\cite[p.
+  55]{???-DM}} <Al Blackburn response to Von Braun's speech to the SETP; experiences with ``brain-dead
+autopilots, broken fire control systems, and failed cockpit
+computers''\cite[p. 68]{???-DM}> From
 this admittedly partial perspective, the resourcefulness of human
 pilots is the answer to automated technology's lack of reliability.
 
@@ -594,10 +603,13 @@ envelope rather than being radioed from the ground\cite{???}---and
 this automation was seen as a feminization of space:  Soviet
 spacecraft required no skill to operate, and were therefore,
 rhetorically at least, less impressive.\cite{???} This idea was
-supported some years later in <XXXX> by the flight of Valentina Tereshkova, the
+supported some years later in 1963 by the flight of Valentina
+Tereshkova, the 
 first woman in space, a milestone not followed by the United States
 until the 1970s. This approach perhaps fit a communist ethos, sending
-the representatives of every-man and every-woman into space, but did
+the representatives of every-man and every-woman into
+space,\footnote{Neither Gargarin nor Tereshkova had aristocratic
+  family backgrounds.} but did
 not fit with the ideally meritocratic culture and the political aims
 of the US program, not to mention the flying culture of the astronauts
 ultimately selected for the program.\footnote{All those selected for
