--- a/chap2.tex
+++ b/chap2.tex
@@ -26,6 +26,16 @@
 %% Note: SOMEWHERE you should talk about the double-speak; freeing up
 %% the roads for car lovers . . . doesn't make sense
 
+
+EDITS
+Kelly Joyce, fMRI; Magnetic Appeal: MRI and the Myth of Transparency
+
+Ah, mapping via Karen Caplan
+Starr & Bowker, standards? resonant?
+
+H.M.Collins book: p.76; something to think about w/ machinic actions
+
+
 We find ourselves in an era of seemingly continual technological
 change that is strangely most noticeable in the most mundane parts of
 our lives---how we shop, how we communicate, how we find
