--- a/concl.tex
+++ b/concl.tex
@@ -34,6 +34,8 @@ Law/Policy, and STS/Anthro background (specifically on technology \&
 people, edges of HCI, Andy Clark on natural-born cyborgs) to paint the
 whole picture of the forces in play (2 p, v. philosophical)
 
+http://boingboing.net/2015/03/10/philip-k-dicks-androids-blu.html
+
 2) VERY different potential impacts if we are looking at fully
 autonomous vs. partially autonomous 
 --in terms of human role and our understanding of our own role
@@ -80,6 +82,8 @@ media
 
 
 Conclusion:
+Can't get positive social effects by just adding autonomy!
+
 The pro-side: millions of deaths if we don't do something now, so we
 have to accept these
 The con-side: (regulator) current deaths not on my hands, but if one
