--- a/chap3.tex
+++ b/chap3.tex
@@ -10,6 +10,9 @@
 %% -some stakes (data) are still applicable, but others may be
 %% ameliorated
 
+EDITS
+SUCHMAN: plans and situated actions
+
 Most automated vehicle narratives---and all those we have investigated
 so far---rest on two primary, interlocking assumptions. First, the nature of the
 ideal human-machine interaction for vehicle control is assumed to be
@@ -524,13 +527,18 @@ voyaging, how they would be selected, tested, and kept alive. But
 lurking behind this majestic picture of manned spaceflight was a dark
 realization for prospective astronauts: to von Braun himself, the
 astronaut would be a mere passenger, ferried into space by automated
-rockets. In a speech <to the Society of Experimental Test Pilots in
-August of 1959> <his quote about
-capabilities; human control is ``actually undesirable'' b/c man is ``outrageously slow and cumbersome'' in missile terms>.\cite[p. 66-67]{???-DM}
-<Relate to earlier speech: Richard Horner on automation to SETP,
-October 4, 1957. reasoned and 
-balanced, but technology would progress faster than us; the ``link''
-that improves the least ``is the man himself''\cite[p. 19]{???-DM}>
+rockets. In a speech to the Society of Experimental Test Pilots in
+August of 1959, a hostile audience for this sort of rhetoric, von
+Braun emphasized that human control in rocketry is ``actually
+undesirable'' because human beings are ``outrageously slow and
+cumbersome'' in missile terms.\cite[p. 66-67]{???-DM} While von Braun
+may have been the most polemical, he was not alone in his cautions to
+test pilots about the limits of their capacities.
+In an earlier speech to the SETP (October 4, 1957) on automation and
+the ``survival'' of the test pilot as a profession, Richard Horner
+took a balanced and moderate view on human involvement, but warned
+that technology would progress faster than human beings change:
+the ``link'' that improves the least ``is the man himself''\cite[p. 19]{???-DM}>
 
 Pilots---prospective astronauts---were not about to find themselves
 cut out of the control loop, and for good reasons. Not only was their
@@ -540,7 +548,8 @@ and cutting-edge vehicles like the X-15, which though it necessarily
 incorporated significant automation to deal with hypersonic flight and
 the transition from atmospheric to extra-atmospheric operation, kept
 the pilot firmly in command\footnote{Kelly Johnson, the leading aircraft
-designer in the US, working at Lockheed, objected to the manned component of the X-15
+designer in the US, working at Lockheed, objected to the manned
+component of the X-15
 project, but his objections were overruled by the NACA.\cite[p.
   46]{???-DM}} through fly-by-wire controls\cite{???}---they had 
 every reason to doubt the capabilities of computerized guidance and
@@ -548,10 +557,11 @@ control systems.\footnote{Even the fly-by-wire control was somewhat
   controversial. Milt Thompson, a test pilot in the X-15 program, said
   of it: ``you would like him [the engineer responsible] to be in the
 airplane with you to be exposed to any adverse results.''\cite[p.
-  55]{???-DM}} <Al Blackburn response to Von Braun's speech to the SETP; experiences with ``brain-dead
-autopilots, broken fire control systems, and failed cockpit
-computers''\cite[p. 68]{???-DM}> From
-this admittedly partial perspective, the resourcefulness of human
+  55]{???-DM}} Al Blackburn's response to Von Braun's speech to the
+SETP was particularly empassioned, and recounted his many experiences with
+``brain-dead autopilots, broken fire control systems, and failed cockpit
+computers''\cite[p. 68]{???-DM} From
+his admittedly partial perspective, the resourcefulness of human
 pilots is the answer to automated technology's lack of reliability.
 
 Such debates over control did not go away, but lasted through the each
@@ -597,9 +607,10 @@ be manned, precisely because human spaceflight captured peoples
 imaginations, and because the Soviets were certain to continue their
 piloted space flight ventures. But Soviet spacecraft continued to be
 more automated than their Western counterparts---Gargarin could not
-operate abort functionality without unlocking a combination lock, the
+operate manual backup functionality without unlocking a combination
+lock, the
 code to which was only reluctantly placed in the cockpit in a sealed
-envelope rather than being radioed from the ground\cite{???}---and
+envelope rather than being radioed from the ground\cite[p. 89]{???-DM}---and
 this automation was seen as a feminization of space:  Soviet
 spacecraft required no skill to operate, and were therefore,
 rhetorically at least, less impressive.\cite{???} This idea was
@@ -630,7 +641,10 @@ culture was dominated by influences from the test pilot community.}
 %% with something BIG
 %% -Russian space automation was a sort of feminiziation of space; their
 %% astronauts required no skill
-%% ---perhaps fit a communist ethos (sending the everyman (or woman) into space), but not a meritocratic, capitalist one
+%% ---perhaps fit a communist ethos (sending the everyman (or woman)
+%% into space), but not a meritocratic, capitalist one
+
+%%%%WARNING CITATION STYLE CHANGE%%%%%%%%
 
 The development of the Gemini spacecraft---actually started after the
 Apollo project, intended to demonstrate capabilities necessary for
@@ -638,35 +652,224 @@ a mission to the moon to take place---set out to extend the
 capabilities of Mercury, and incorporate lessons learned from the
 precursor program. One way this occurred was specifically technical, a
 re-engineering of the space capsule to allow systems to be installed
-and serviced from the outside of the craft. But another
+and serviced from the outside of the craft\cite{???}. But another
 reorchestration of space flight in the Gemini program involves the
 human's interaction with the spacecraft through control systems.
--pilots want a role in launch vehicles
-Gemini and related research, evidence for putting the pilot in command
---from launch sims, ground tests
--interest in orbital maneuvers suggests returning piloting to pilots;
-but orbital dynamics makes it impossible to fly by eye
---triumphs of manual control (aided of course by automated read-outs, IVI)
+Pilots wanted a role in launch vehicle guidance, and a number of
+simulator studies were commissioned to study the capacity of human to
+actually guide boosters into orbit\cite{???}. Pilots, spun in a
+centrifuge in Johnsville PA to simulate the immense acceleration of
+takeoff, flew
+simulated rockets: while some tests failed, with astronauts losing
+control during stage changes, some were able to launch the vehicle
+into orbit, and these tests served as evidence for the importance of
+pilots to the ``reliability and flexibility'' of launch vehicles,
+the same phrasing used to justify the pilot's role in the X-15
+testing\cite[p. 72]{???-DM}. Some even argued that the lack of pilots
+explained the high failure rate of automated rockets\cite[p.
+  73]{???-DM}. Though no American would ever fly the launch stage of
+the rocket, pilots continued to push for control. Robert Voas,
+responsible for astronaut selection and training, was a firm believer
+in the human role both for monitoring and managing automated systems,
+but also 
+navigation, communications, and performing research\cite[p.
+  77]{???-DM}. Monitored automation, which prevailed in Mercury---with
+the human ``more than secondary, if still less than primary''\cite[p.
+  77]{???-DM}---continued into the Gemini program. The Gemini pilot
+interfaced with an inertial navigation system, a digital computer, and
+an optical star tracker, responsible for tasks that would be too heavy
+or too difficult to automate, and remaining as a backup for automated
+systems\cite[p. 83]{???-DM}. But Mindell holds that advancing
+technology was seen to be served by the inclusion of more human
+control, which Mercury (in association with simulator tests) had proved was
+feasible\cite[p. 84]{???-DM}. The importance of orbital maneuvers,
+rendezvous and docking, for the Gemini missions suggested returning
+the role of piloting to the spacecraft pilot, and rendezvous was
+indeed performed with manual control\cite[p. 84]{???-DM}. But, as
+pilots (particularly, Jim McDivitt) soon discovered, orbital
+rendezvous could not be achieved by the
+traditional manner of flying: in orbit, flying toward an object is not
+an appropriate way to achieve rendezvous, which requires not only
+passing close to the target but remaining there for an extended
+period. Matching velocity means matching orbits, and so ``catching
+up'' to a target may require going slower to change orbits\cite[p.
+  86]{???-DM} ``Numbers, equations, and calculations'' would be
+required, and were bootstrapped to the pilot's senses with a new
+readout, the IVI or Incremental Velocity Indicator, which could be
+programmed with particular velocity changed in different axes and
+would show visually when those particular burns had been achieved,
+so that the human pilot would know when to stop accelerating\cite[p.
+  86-87]{???-DM} Pilots did not fight the implementation of such
+technology, realizing that anything that ``helped them manage the
+chaos [of space flight] would extend their ability,'' and overall
+liked piloting the Gemini craft, which they saw as expressing the
+``national character'' through the importance of the individual pilot
+to the vehicle's operations\cite[p. 88]{???-DM} Gemini is 
+a triumph of manual control, aided of course by automated read-outs.
 
-Apollo starts too soon to learn the lessons of Gemini
--arguments over Apollo computer; got away with a lot b/c test pilots
-were busy with Gemini
--but manual control still critical (e.g. moon landings)
+The Apollo program started too soon to learn the lessons of
+Gemini---the Apollo system design was complete by the time Gemini
+missions actually flew\cite[p. 93]{???-DM}---but despite the
+ultimately high levels of automation present with the Apollo
+spacecraft, arguments about human role shaped development on this
+parallel program. One major locus of such controversy was the Apollo
+guidance computer: Should it allow fully autonomous (from Earth)
+operation? What functions should be fully automated? The idea of an
+autonomous navigation system was not fundamentally new. The Apollo
+project pulled from previous experience in digital computer design and
+development, both from military ICBM programs which often used
+self-contained inertial guidance units, and from work by Laning and
+Trageser from the Instrumentation Lab at MIT on a small Mars probe,
+driven by ``self-dependent'' navigation, which could ideally use
+complex logic to respond autonomously to problems\cite[p.
+  99-100]{???-DM} Though self-contained navigation capacity was a goal
+for the engineers at MIT responsible for the guidance system---working
+under Charles Stark Draper, who was also involved in developing
+guidance systems for ICBMs---much of this functionality was ultimately
+removed due to computer memory restrictions\cite{???}. The Apollo
+spacecraft would have to be in contact with Earth for guidance
+corrections and instructions over the long term. Human beings were
+again counted on for sextant readings and for initiating appropriate
+program modes and monitoring automation systems, and the spacecraft
+could operate in a self-contained fashion for some length of
+time\cite{???}. While the initial idea for lunar landing was that the
+computer would guide the spacecraft down, given appropriate landmark
+fixes from pilots, this was not how the LM was flown: despite
+possessing an autopilot capable of automatic landing, pilots used
+their prerogative of ultimate control to take over at various stages
+of landing: Armstrong, famously, took manual control on the Apollo 11
+landing to seek out a cleaner landing spot and avoid a potentially
+dangerous crater\cite[p. 3]{???-DM} While the Apollo engineers perhaps
+got away with a lot of automation, in part because the astronauts were
+busy with Gemini instead, manual control still proved critical to the
+overall operation of the system. The mission depended on human and
+automated systems both, and the successful integration of their roles
+and capabilities. When conceived of as a model for automated vehicle
+engineering, the history of manned space programs does not fit the
+popular narrative of automation, instead presenting a clear example of
+joint human-machine systems in action.
 
-Wienser and other scientists perennially against manned spaceflight,
-pushing for unmanned; but Even in the unmanned space, autonomy isn't the end-all-be-all
-Mars rover/space probes
-footnote the \cite{simonite} piece: And so Google’s new vehicle design
+While these manned missions were occurring, Jerome Wienser,
+Presidential science advisor and later President of MIT, and other
+scientists were perennially against manned
+spaceflight.\footnote{Wiesner not only disagreed with the importance
+  of manned space flight, he took issues with the decision to perform
+  Lunar Orbit Rendezvous, LOR, as the Apollo mission mode. He
+  continued to oppose LOR after the official NASA announcement, and
+  argued with von Braun in front of the
+  press at Marshall Space Flight Center, until President Kennedy
+  stepped in to end the argument\cite{???}.} Unmanned exploration is
+cheaper by orders of magnitude\cite[p. 66]{???-coxMurray}. To serve
+scientific goals, humans are not required, and in his role as chair of
+the Presidential Science Advisory Committee, Wiesner felt that his
+duty was to argue against the work on scientific
+grounds\cite{???}.\footnote{While Killian's list of goals for the
+  space program included the human need to explore, national defense,
+  national pride, and scientific experiment, and while the
+  congressional hearings about the space program said little about
+  defense, trading it for discussion of propaganda value and a
+  ``vertiginous rhetoric'' of scientific exploration, manned space
+  exploration is in general not justifiable by scientific ends\cite[p.
+    194-197]{smithSelling}.} Instead of a manned program, scientists
+have continued to push for unmanned probes,\footnote{And these probes
+  actually get leveraged in the popular narrative as sources for
+  automated vehicle design inspiration: `` And so Google’s new vehicle
+  design 
 takes a leaf out of NASA’s design book to cope with such
-eventualities. “It doesn’t have a fallback to human—it has redundant
-systems,” said Fairfield. “It has two steering motors, and we have
-various ways we can bring it to a stop.”
+eventualities. 'It doesn’t have a fallback to human—it has redundant
+systems,' said Fairfield. 'It has two steering motors, and we have
+various ways we can bring it to a stop'''\cite{simonite}. This is a
+very reductive view even of the most remote of NASA's unmanned space
+systems, let alone manned systems with which the Google vehicles must share
+the critical characteristic of containing human occupants.} but even for
+unmanned exploration systems in space, autonomy is not the
+end-all-be-all goal. More important is the link between human
+operators and scientists on the ground, and the remote science
+platform responsible for carrying out instructions. 
+
+While people may
+think of the Mars rovers \emph{Spirit} and \emph{Opportunity} as
+autonomous robots remotely carrying out science experiments---as
+Clancey describes them often showing up anthropomorphized as a ``robot
+geologist'' or 
+``explorer'' in news coverage\cite[p. 7]{???-clancey}---they are
+in reality telerobotic systems in Sheridan's mold. The rovers are not
+sent out to wander or find goals by themselves. They drive mostly
+blind, with only their immediate obstacle detection, following manual
+waypoints entered by human navigators on Earth: their autonomous
+path-finding systems are much slower, and use more power, and are
+therefore generally avoided\cite[p. 118]{???-clancey} While the rovers
+are out of contact for the span of two weeks during solar
+conjunctions, the instruments lie dormant and the rovers sit
+still\cite[p. 25]{???-clancey}. Though the rovers are technically capable of
+carrying out pre-planned science sequences during this time, including
+automatic navigation, this capability is not used. Human observation,
+human teleoperation, is too important a part of the process, and
+autonomous operation without monitoring presents too many risks. Human
+scientists define sites of interest, locations to take samples, and
+the paths to reach them most safely and effectively. Scientists
+contacted the rovers at least once per day to relay plans, and again
+to retrieve results, with more intense schedules during the early
+parts of the program\cite[p. 58]{???-clancey}. Small sets of
+operations are requested, and the outcomes monitored, with new plans
+being made by humans to account for new data at each step.
+
+This in some ways
+represents greater engagement between scientists and the remote
+machine than during the earlier \emph{Viking} mission, in which weeks
+were spent writing programs to run the robot.\cite[p. 58]{???-clancey}
+The recent missions step back
+from programmatic operation, and toward closely-coupled human
+supervised control. The Mars rovers could
+certainly have been made more autonomous, but this would have opposed
+their function. The quality of the mission depends on ``aspects of the
+MER's design that promote the \emph{agency} of the scientists''
+themselves, rather than automated operation specifically\cite[p.
+  xii]{???-clancey}. Scientific work in the field is ``opportunistic,
+serendipitous, and incremental,''\cite[p. 32]{???-clancey} yielding
+not so much to \emph{a priori}
+plans of great detail, but Suchman's ``situated
+action''\cite{???-suchman}. Researchers on the ground actually
+experience a sense of ``telepresence'' through these ``synergistic'' machines, created
+by virtue of their closely-coupled operations and the MER's
+semi-anthropomorphic bodies\cite[p. 55]{???-clancey}. Scientists see
+as if they are the rover, and have to ``retool'' their thinking, to
+become the ``mind'' of the rover and plan its work in a ``symbiotic''
+way\cite[p. 106, 110, 118]{???-clancey}. The system's autonomy does not replace the
+scientists, but allows them to do more of what they want to do and are
+best at, and less of what they don't: some automation could reduce the
+autonomy of the scientists, and their ability to act creatively and
+spontaneous to capitalize on new findings\cite[p.
+  118-119]{???-clancey}. 
+
+autonomy not an ``inherent property of technology'' but ``a relation
+between people, technology, and a task-environment'' (119)
+
+While we might say ``\emph{Opportunity} encountered''
+something,\cite[p. 8]{???-clancey} this
+is really just convenient shorthand for scientists on Earth encountering it
+through the telerobotic platform.
+
+-sites of interest defined by human scientists, in contact at least
+once if not more times per day.
+
+
+Human common sense
+is integral to rover missions, and organizations operating expensive
+technology in a high-risk environment want humans to be responsible
+for the well-being of the equipment.
+
+
+
+Mars rover/space probes
 --which is a very reductive view even of Mars rovers, let alone any
 manned space systems (besides rockets at launch)
 
 Underwater exploration
+-discussions with DM
 
 Aircraft (see Digital Apollo ch 2)
+-Boeing and Airbus
 
 \subsection{Whither Alternate Narratives?}
 
