more material added to chap3

--- a/chap3.tex
+++ b/chap3.tex
@@ -842,34 +842,100 @@ autonomy of the scientists, and their ability to act creatively and
 spontaneous to capitalize on new findings\cite[p.
   118-119]{???-clancey}. 
 
-autonomy not an ``inherent property of technology'' but ``a relation
-between people, technology, and a task-environment'' (119)
-
-While we might say ``\emph{Opportunity} encountered''
-something,\cite[p. 8]{???-clancey} this
+As Clancey suggests, autonomy is not an ``inherent property of
+technology'' but ``a relation between people, technology, and a
+task-environment'' and should be considered in those terms\cite[p.
+  119]{???-clancey}. While we might say, colloquially, that
+``\emph{Opportunity} encountered'' something,\cite[p. 8]{???-clancey} this
 is really just convenient shorthand for scientists on Earth encountering it
-through the telerobotic platform.
+through and in concert with the telerobotic platform. Human knowledge,
+perception, and common sense is integral to rover missions, and
+organizations operating expensive 
+technology in a high-risk environment quite reasonably want humans to
+be responsible
+for the well-being of the equipment. The same issues play out with
+robotic vehicles for underwater exploration. The most famous of these,
+Alvin and Jason, deeply involve human scientists as operators in real
+time, either directly from within the vehicle or through a tethered
+link.\cite{???} Most AUVs (or Autonomous Underwater Vehicles) are not
+truly autonomous, but are operated remotely using low-bandwidth data
+links via acoustic communications.\footnote{David Mindell, discussion
+  with the author, September 3, 2014} This is largely an issue of risk
+aversion. While it has often been assumed, even sometimes by system
+designers, that long duration missions will be performed autonomously,
+this is not the primary mode in which AUVs are operated: the last
+thing you want to happen, as a scientist presiding over an expensive
+piece of equipment, is to lose the vehicle irretrievably or have an
+instrument fail on the first day and not know about it for weeks. So
+instead of long, autonomous missions, most operations involve many
+shorter missions with acoustic links coupling the device with
+shipboard researchers.\footnote{David Mindell, discussion with the
+  author, September 3, 2014} While self-driving cars would not
+be much like Mars rovers or underwater robots, telerobotic exploration
+provides potential lessons
+to be learned in terms of human and machine roles, and the level of
+autonomy one wants from a machine in a human-machine relationship.
+Considering what type of interaction promotes the agency
+of human owners and occupants---allowing them to do more of what they
+want and less of what they don't---is particularly important,
+especially while recognizing that the answer to what humans want to do
+is not necessarily ``nothing.'' And while local streets are not as
+remote and inaccessible as Mars or the bottom of the ocean, having
+one's vehicle go missing on the way to or from a parking garage while
+operating autonomously would be a significant issue, and the risk of
+this kind of failure must be considered in the human-machine system
+design. Cars are still capital-intensive pieces of equipment, and we
+generally want to know where they are at all times. Whether vehicles
+are monitored
+from within or without, it seems unlikely designers will be able to
+escape the need to loop the human in to the decision-making process.
 
--sites of interest defined by human scientists, in contact at least
-once if not more times per day.
+But there is reason to suggest that even this picture of supervision
+and monitoring on a long timescale may be too ambitious for automated
+vehicles of the near future. As we have discussed, a number of major
+engineering problems remain to be solved in order to build cars that
+are capable of fully automated operation in all reasonable situations,
+which implies more than occasional supervision is required: human engagement in
+sensing and reacting, on reasonable time scales, may be necessary. The
+specter that we have been dodging so far, throughout this chapter and
+indeed through much of the thesis, is the issue of human attention.
+Issues with attention have always been implicit within the discussion,
+since inattention is precisely the human quality that makes
+self-driving vehicles most necessary, at least rhetorically. But human
+supervisory control, in its practical applications, has much to teach
+us about the limits of human attention, and indeed such human-factors
+research is the source of the NHTSA's claim that users of
+higher-levels of automation will not, and will not be expected to,
+monitor its operation. An often-used justification
+for entirely eliminating the human from the vehicle control loop is
+related to this tendency not to monitor the automation system:
+research shows that human operators who become reliant on the
+automation to perform a task are ill-equipped to take that task back
+in a crisis situation, and task hand-over is likely to be
+catastrophic.\cite{???} A transportation systems researcher I spoke to
+even cited this as the key reason he felt that highway-only
+self-driving systems would not work, and that companies would have to
+design for full automation everywhere.\footnote{How much do I say,
+  safely?} 
 
+This issue has so far played out most visibly in airplane cockpit
+automation, and especially given the role that autopilots have as
+models of ground vehicle automation, it is worth examining human
+supervisory control in this practical
+context. As we have found previously when examining automation
+technologies, however, actual autopilot design and use differs 
+significantly from its popular representation.
+-AF 447 crash
+-this concern with automation is not new: history pulling from DA ch2
+-but it is having new results: Boeing and Airbus stepping back from
+automation, while increasing computerization
+--adaptive automation
+---taking on tasks in high-stress situations, returning them in
+low-stress situations
 
-Human common sense
-is integral to rover missions, and organizations operating expensive
-technology in a high-risk environment want humans to be responsible
-for the well-being of the equipment.
-
-
-
-Mars rover/space probes
---which is a very reductive view even of Mars rovers, let alone any
-manned space systems (besides rockets at launch)
-
-Underwater exploration
--discussions with DM
-
-Aircraft (see Digital Apollo ch 2)
--Boeing and Airbus
+-difference in professionalization of pilots
+-but no fundamental reason why this knowledge is not applicable here,
+-if appropriately moderated for the role and status of the driver
 
 \subsection{Whither Alternate Narratives?}
 
