edits to chap3, working on airline automation

--- a/chap3.tex
+++ b/chap3.tex
@@ -924,9 +924,46 @@ models of ground vehicle automation, it is worth examining human
 supervisory control in this practical
 context. As we have found previously when examining automation
 technologies, however, actual autopilot design and use differs 
-significantly from its popular representation.
--AF 447 crash
+significantly from its popular representation. It is not a fully automated
+system that controls the entire aircraft, but a set of specific tools
+leveraged by pilots to increase their agency, similarly to how
+geologists use the automated capabilities of the Mars rovers to
+increase theirs. Autopilots are also complex systems, with many modes
+that require deep technical knowledge and training to use
+appropriately\cite{???}---and which, when poorly designed from a human factors
+angle, as they have often been, can behave in ways that are unexpected
+by and antithetical to the wishes of the pilots. Stories of crashes
+due to autopilot mode confusion abound, but one of the most important
+incidents to consider in our context is the Air France Flight 447 crash. AF
+447 took off from Rio de Janiero, Brazil on its way to Paris, crashing
+over the Atlantic Ocean at 02:14 UTC on June 1, 2009. The official
+report, published in 2012, identifies the cause of the accident as a
+failed hand-over of control from the autopilot system to the pilots:
+when the autopilot system shut down due to a failure of its airspeed
+indicators, the pilots were not prepared to so suddenly resume the
+task of flying a large airliner in poor conditions.\cite{BEA}
+Seemingly confused by the situation they were in, the pilot and
+co-pilot provided contradictory control inputs to the aircraft and
+stalled the plane, causing it to crash. 
+
+This crash brings a number of human supervisory control questions to
+the fore. What is the proper role of pilots? And how quickly can they
+be expected to take back control authority over particular aspects of
+aircraft operation that have been previously delegated to an automated
+system? Are human pilots so unreliable that we should immediately push
+toward automating all aircraft operations? Or are autopilots so
+finicky that we should emphasize manual flying skills and reduce or
+eliminate the use of autopilots. Most likely, the correct answer is
+somewhere in between. But this concern with cockpit automation is not new.
 -this concern with automation is not new: history pulling from DA ch2
+--many airlines actually have guidelines requiring automation to be
+used whenever possible
+
+While the AF 447 example shows the
+perils of human interaction with automated systems, its significance
+within aircraft development does not seem to be broadly appreciated
+outside of that field. <gets taken by car people as human interaction
+should NEVER be expected; aircraft construction takes it the other way>
 -but it is having new results: Boeing and Airbus stepping back from
 automation, while increasing computerization
 --adaptive automation
